# labs_ppmo

./: CMakeLists.txt  CMakePresets.json  README.md
ch2/: CMakeLists.txt  hello.cc  hello2.cc
